--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.0.M2'
+		springBootVersion = '2.0.1.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -27,20 +27,21 @@ repositories {
 	maven { url "https://repo.spring.io/milestone" }
 }
 
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.M1'
-    }
-}
+//dependencyManagement {
+//    imports {
+//        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR7'
+//    }
+//}
 
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-starter-hateoas')
+//	compile('org.springframework.boot:spring-boot-starter-hateoas')
     compile('org.springframework.boot:spring-boot-starter-webflux')
-    compile('org.springframework.cloud:spring-cloud-starter-gateway:2.0.0.M1')
-    compile('org.springframework.cloud:spring-cloud-gateway-mvc:2.0.0.M1')
-    compile('org.springframework.cloud:spring-cloud-gateway-dependencies:2.0.0.M1')
+    compile('org.springframework.cloud:spring-cloud-starter-gateway:2.0.0.M7')//
+//    compile('org.springframework.cloud:spring-cloud-gateway-mvc')//:2.0.0.M1
+//    compile('org.springframework.cloud:spring-cloud-gateway-dependencies')//:2.0.0.M1
+	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery:2.0.0.M7')//
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('io.projectreactor:reactor-test')
