--- a/service2/build.gradle
+++ b/service2/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.0.M2'
+		springBootVersion = '2.0.1.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -26,12 +26,22 @@ repositories {
 	maven { url "https://repo.spring.io/milestone" }
 }
 
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.RC1'
+	}
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
+	compile ('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
+	compile ('org.springframework.cloud:spring-cloud-starter-zipkin')
+
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.junit.jupiter:junit-jupiter-api:5.0.0-M4')
+	testCompile('org.junit.jupiter:junit-jupiter-engine:5.0.0-M4')
 	testCompile('io.projectreactor:reactor-test')
 }
