--- a/service2/build.gradle
+++ b/service2/build.gradle
@@ -37,11 +37,17 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile ('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
-	compile ('org.springframework.cloud:spring-cloud-starter-zipkin')
+//	compile ('org.springframework.cloud:spring-cloud-starter-zipkin')
+	compile ('org.springframework.cloud:spring-cloud-starter-sleuth')
 
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.junit.jupiter:junit-jupiter-api:5.0.0-M4')
 	testCompile('org.junit.jupiter:junit-jupiter-engine:5.0.0-M4')
 	testCompile('io.projectreactor:reactor-test')
+}
+
+wrapper {
+	description 'creates gradle wrapper in order to execute ./gradlew <task>'
+	gradleVersion = '4.7'
 }
