--- a/service2/src/main/resources/bootstrap.yml
+++ b/service2/src/main/resources/bootstrap.yml
@@ -3,14 +3,15 @@ spring:
     name: test-service-2
   cloud:
     zookeeper:
-      connect-string: 10.132.0.6:32776
+      connect-string: 127.0.0.1:2181
       config:
         root: /config/credit/test-sevice
-  zipkin:
-    baseUrl: http://127.0.0.1:9411/
+
+#  zipkin:
+#    baseUrl: http://127.0.0.1:9411/
 #    service:
 #      name: test-service-2
-  sleuth:
+#  sleuth:
 #    enabled: true
-    sampler:
-      probability: 1.0
+#    sampler:
+#      probability: 1.0
