--- a/service1/build.gradle
+++ b/service1/build.gradle
@@ -27,11 +27,19 @@ repositories {
 }
 
 
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.RC1'
+	}
+}
+
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
-	compile ('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery:2.0.0.M7')
+	compile ('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
+	compile ('org.springframework.cloud:spring-cloud-starter-sleuth')
+
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.junit.jupiter:junit-jupiter-api:5.0.0-M4')
